fix: hide ::before/::after content for dokan-admin-notices-wrap

--- a/assets/src/less/global-admin.less
+++ b/assets/src/less/global-admin.less
@@ -4,6 +4,12 @@
         padding: 0 !important;
         box-shadow: none;
         background: transparent;
+
+        &::before,
+        &::after {
+            content: none !important;
+            display: none !important;
+        }
     }
 
     .dokan-admin-notices {
